@@ -484,6 +484,7 @@ Matthieu Gautier
 Stephen M. Gava
 Xavier de Gaye
 Harry Henry Gebel
+Tamás Bence Gedai
 Marius Gedminas
 Jan-Philip Gehrcke
 Thomas Gellekum
