@@ -91,6 +91,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #23718: Fixed parsing time in week 0 before Jan 1.  Original patch by
+  Tamás Bence Gedai.
+
 - Issue #20589: Invoking Path.owner() and Path.group() on Windows now raise
   NotImplementedError instead of ImportError.
 
